<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDescription"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtWashes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtHint"
        android:inputType="number"
        android:textSize="22sp" />

    <RadioGroup
        android:layout_width="276dp"
        android:layout_height="81dp">

        <RadioButton
            android:id="@+id/radExteriorOnly"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radExteriorOnly" />

        <RadioButton
            android:id="@+id/radExteriorVacuum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radExteriorVacuum" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculate"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imgCarwash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgCarwash"
        app:srcCompat="@drawable/carwash" />

</LinearLayout>